Updated each service Dockerfile to use lightweight base images for smaller final image size

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,4 +1,12 @@
-FROM openjdk:17-jdk-slim
-VOLUME /tmp
-COPY target/api-gateway-1.0.0.jar api-gateway.jar
-ENTRYPOINT ["java", "-jar", "/api-gateway.jar"]
+# Stage 1: Build
+FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -pl api-gateway -am -DskipTests
+
+# Stage 2: Run
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+COPY --from=build /app/api-gateway/target/api-gateway-*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
