--- a/discovery-server/Dockerfile
+++ b/discovery-server/Dockerfile
@@ -1,4 +1,12 @@
-FROM openjdk:17-jdk-slim
-VOLUME /tmp
-COPY target/discovery-server-1.0.0.jar discovery-server.jar
-ENTRYPOINT ["java", "-jar", "/discovery-server.jar"]
+# Stage 1: Build
+FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -pl discovery-server -am -DskipTests
+
+# Stage 2: Run
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+COPY --from=build /app/discovery-server/target/discovery-server-*.jar app.jar
+EXPOSE 8761
+ENTRYPOINT ["java", "-jar", "app.jar"]
