--- a/inventory-service/Dockerfile
+++ b/inventory-service/Dockerfile
@@ -1,4 +1,12 @@
-FROM openjdk:17-jdk-slim
-VOLUME /tmp
-COPY target/inventory-service-1.0.0.jar inventory-service.jar
-ENTRYPOINT ["java", "-jar", "/inventory-service.jar"]
+# Stage 1: Build
+FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -pl inventory-service -am -DskipTests
+
+# Stage 2: Run
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+COPY --from=build /app/inventory-service/target/inventory-service-*.jar app.jar
+EXPOSE 8084
+ENTRYPOINT ["java", "-jar", "app.jar"]
