--- a/.github/workflows/ci-cd-discovery.yml
+++ b/.github/workflows/ci-cd-discovery.yml
@@ -2,22 +2,19 @@ name: CI/CD - Discovery Server
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - 'discovery-server/**'
   pull_request:
-    branches:
-      - main
+    paths:
+      - 'discovery-server/**'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      # Step 1: Checkout code
       - name: Checkout source code
         uses: actions/checkout@v4
 
-      # Step 2: Set up Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -25,26 +22,21 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
-      # Step 3: Build with Maven
       - name: Build discovery-server
         run: mvn -pl discovery-server -am clean package -DskipTests
 
-      # Step 4: Run Tests
       - name: Run unit tests
         run: mvn test -pl discovery-server
 
-      # Step 5: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 6: Login to DockerHub
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Step 7: Build and Push Docker Image
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
