--- a/.github/workflows/ci-cd-cart.yml
+++ b/.github/workflows/ci-cd-cart.yml
@@ -1,54 +1,131 @@
+#name: CI/CD - Cart Service
+#
+#on:
+#  push:
+#    paths:
+#      - 'cart-service/**'
+#  pull_request:
+#    paths:
+#      - 'cart-service/**'
+#
+#jobs:
+#  build-and-deploy:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      # Step 1: Checkout code
+#      - name: Checkout source code
+#        uses: actions/checkout@v4
+#
+#      # Step 2: Set up Java 17
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v4
+#        with:
+#          distribution: 'temurin'
+#          java-version: '17'
+#          cache: 'maven'
+#
+#      # Step 3: Build the cart-service module
+#      - name: Build Cart Service
+#        run: mvn -pl cart-service -am clean package -DskipTests
+#
+#      # Step 4: Run unit tests
+#      - name: Run unit tests
+#        run: mvn test -pl cart-service
+#
+#      # Step 5: Set up Docker Buildx
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#
+#      # Step 6: Login to DockerHub
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      # Step 7: Build and Push Docker image
+#      - name: Build and Push Docker image
+#        uses: docker/build-push-action@v6
+#        with:
+#          context: .
+#          file: cart-service/Dockerfile
+#          push: true
+#          tags: harshvardhansingh7/ecommerce-microservices:cart-service-latest
+
 name: CI/CD - Cart Service
 
 on:
   push:
     paths:
-      - 'cart-service/**'
+      - 'backend-microservices/cart-service/**'
   pull_request:
     paths:
-      - 'cart-service/**'
+      - 'backend-microservices/cart-service/**'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
-      - name: Checkout source code
-        uses: actions/checkout@v4
+      # Checkout
+      - uses: actions/checkout@v4
 
-      # Step 2: Set up Java 17
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      # Java
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-          cache: 'maven'
 
-      # Step 3: Build the cart-service module
+      # Build
       - name: Build Cart Service
-        run: mvn -pl cart-service -am clean package -DskipTests
+        run: mvn -pl backend-microservices/cart-service -am clean package -DskipTests
 
-      # Step 4: Run unit tests
-      - name: Run unit tests
-        run: mvn test -pl cart-service
+      - name: Run Tests
+        run: mvn test -pl backend-microservices/cart-service
 
-      # Step 5: Set up Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # Docker buildx
+      - uses: docker/setup-buildx-action@v3
 
-      # Step 6: Login to DockerHub
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
+      # Login DockerHub
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Step 7: Build and Push Docker image
-      - name: Build and Push Docker image
+      # Build & Push Image
+      - name: Build & Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: cart-service/Dockerfile
+          file: backend-microservices/cart-service/Dockerfile
           push: true
           tags: harshvardhansingh7/ecommerce-microservices:cart-service-latest
+
+      # Install kubectl
+      - name: Install kubectl
+        run: sudo snap install kubectl --classic
+
+      # Install KIND
+      - name: Install KIND
+        run: |
+          curl -Lo kind https://kind.sigs.k8s.io/dl/v0.22.0/kind-linux-amd64
+          chmod +x kind
+          sudo mv kind /usr/local/bin/
+
+      # Create KIND cluster
+      - name: Create KIND Cluster
+        run: kind create cluster --name ecommerce --wait 60s
+
+      # Deploy to K8s
+      - name: Deploy Cart Service
+        run: |
+          kubectl apply -f k8s/cart/
+          kubectl set image deployment/cart-service cart-service=harshvardhansingh7/ecommerce-microservices:cart-service-latest
+          kubectl rollout status deployment/cart-service --timeout=120s
+
+      # Show resources
+      - name: Check Deployments
+        run: |
+          kubectl get pods -o wide
+          kubectl get svc
