--- a/.github/workflows/ci-cd-cart.yml
+++ b/.github/workflows/ci-cd-cart.yml
@@ -1,108 +1,58 @@
-#name: CI/CD - Cart Service
-#
-#on:
-#  push:
-#    paths:
-#      - 'cart-service/**'
-#  pull_request:
-#    paths:
-#      - 'cart-service/**'
-#
-#jobs:
-#  build-and-deploy:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      # Step 1: Checkout code
-#      - name: Checkout source code
-#        uses: actions/checkout@v4
-#
-#      # Step 2: Set up Java 17
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v4
-#        with:
-#          distribution: 'temurin'
-#          java-version: '17'
-#          cache: 'maven'
-#
-#      # Step 3: Build the cart-service module
-#      - name: Build Cart Service
-#        run: mvn -pl cart-service -am clean package -DskipTests
-#
-#      # Step 4: Run unit tests
-#      - name: Run unit tests
-#        run: mvn test -pl cart-service
-#
-#      # Step 5: Set up Docker Buildx
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v3
-#
-#      # Step 6: Login to DockerHub
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#
-#      # Step 7: Build and Push Docker image
-#      - name: Build and Push Docker image
-#        uses: docker/build-push-action@v6
-#        with:
-#          context: .
-#          file: cart-service/Dockerfile
-#          push: true
-#          tags: harshvardhansingh7/ecommerce-microservices:cart-service-latest
-
 name: CI/CD - Cart Service
 
 on:
   push:
     paths:
-      - 'backend-microservices/cart-service/**'
+      - 'cart-service/**'
   pull_request:
     paths:
-      - 'backend-microservices/cart-service/**'
+      - 'cart-service/**'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout
-      - uses: actions/checkout@v4
+      # Step 1: Checkout code
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
-      # Java
-      - uses: actions/setup-java@v4
+      # Step 2: Set up Java 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
+          cache: 'maven'
 
-      # Build
+      # Step 3: Build the cart-service module
       - name: Build Cart Service
-        run: mvn -pl backend-microservices/cart-service -am clean package -DskipTests
+        run: mvn -pl cart-service -am clean package -DskipTests
 
-      - name: Run Tests
-        run: mvn test -pl backend-microservices/cart-service
+      # Step 4: Run unit tests
+      - name: Run unit tests
+        run: mvn test -pl cart-service
 
-      # Docker buildx
-      - uses: docker/setup-buildx-action@v3
+      # Step 5: Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # Login DockerHub
-      - uses: docker/login-action@v3
+      # Step 6: Login to DockerHub
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build & Push Image
-      - name: Build & Push Docker Image
+      # Step 7: Build and Push Docker image
+      - name: Build and Push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: backend-microservices/cart-service/Dockerfile
+          file: cart-service/Dockerfile
           push: true
           tags: harshvardhansingh7/ecommerce-microservices:cart-service-latest
 
-      # Install kubectl
       - name: Install kubectl
         run: sudo snap install kubectl --classic
 
